# graph-rag

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
eval/: README.md  questions.jsonl  source_abstracts.jsonl  source_papers.jsonl
scripts/: ingest.py  run_eval.py
src/graphrag/: config.py
src/graphrag/api/: main.py
src/graphrag/eval/: harness.py  judge.py  schema.py  scoring.py
src/graphrag/graph/: dedup.py  extract.py  pipeline.py  store.py
src/graphrag/ingestion/: chunk.py  fetch.py  parse.py  pipeline.py  store.py
src/graphrag/orchestration/: graph.py  state.py
src/graphrag/systems/: flat_baseline.py  grounded_hybrid.py  hybrid_retrieval.py  reranked_hybrid.py  reranker.py  synthesis.py
tests/: test_app.py  test_harness.py  test_orchestration.py  test_reranker.py  test_synthesis.py
