[project]
name = "graphrag-research-assistant"
version = "0.1.0"
description = "GraphRAG research assistant: multi-hop QA over an arXiv corpus, hybrid graph+vector retrieval, measured against a flat-RAG baseline."
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "sqlalchemy>=2.0",
    "sentence-transformers>=3.0",
    "arxiv>=2.1",
    "langgraph>=0.2",
    "openai>=1.40",
    "groq>=0.11",
    "numpy>=1.26",
    "tenacity>=9.0",
    "pymupdf>=1.24",
    "aiohttp>=3.10",
    "gradio>=5.0",
    # Hugging Face's ZeroGPU build environment force-installs torch<=2.11.0
    # alongside our requirements.txt; pinning here avoids a pip resolver conflict
    # against sentence-transformers' unpinned torch dependency (which otherwise
    # pulls the latest 2.13.x). Not needed for local/Docker deployment, but
    # harmless there too.
    "torch<=2.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
